[tool.poetry]
name = "feature-pipeline"
version = "0.1.0"
description = "None"
authors = ["Quentin Plourdeau"]
license = "MIT"
readme = "README.md"
packages = [{include = "feature_pipeline"}]

[tool.poetry.dependencies]
python = ">3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
